[gd_scene load_steps=8 format=2]

[ext_resource path="res://Objects/Dwarves/Dwarf/Dwarf.gd" type="Script" id=1]
[ext_resource path="res://OnePixel.png" type="Texture" id=3]
[ext_resource path="res://Fonts/SHPinsher_16.tres" type="DynamicFont" id=4]
[ext_resource path="res://Sounds/enemy_kill.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/dwarf_attack3.wav" type="AudioStream" id=6]
[ext_resource path="res://Objects/Dwarves/Dwarf/walking_spriteframes.tres" type="SpriteFrames" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 31 )

[node name="Dwarf" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )
move_speed_mod = 1.4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7, -32 )
shape = SubResource( 1 )

[node name="ElfRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="HP" type="Node2D" parent="."]
position = Vector2( 0, -32 )

[node name="Background" type="Sprite" parent="HP"]
modulate = Color( 0.0235294, 0.117647, 0.00784314, 1 )
position = Vector2( 0, -48 )
scale = Vector2( 98, 10 )
texture = ExtResource( 3 )

[node name="HPBar" type="TextureProgress" parent="HP"]
modulate = Color( 0.784314, 0.00392157, 0.00392157, 1 )
margin_left = -48.0
margin_top = -52.0
margin_right = -47.0
margin_bottom = -51.0
rect_scale = Vector2( 96, 8 )
value = 70.0
texture_progress = ExtResource( 3 )

[node name="HPLabel" type="Label" parent="HP"]
margin_left = -40.0
margin_top = -76.0
margin_right = 40.0
margin_bottom = -56.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "10"
align = 1

[node name="NextAttackTimer" type="Timer" parent="."]

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -41 )
scale = Vector2( 1.28, 1.28 )
frames = ExtResource( 7 )
animation = "shooter"
frame = 1
[connection signal="area_entered" from="." to="." method="_on_Dwarf_area_entered"]
[connection signal="timeout" from="NextAttackTimer" to="." method="_on_NextAttackTimer_timeout"]
